--- a/GameCollector/Info.plist
+++ b/GameCollector/Info.plist
@@ -4,6 +4,8 @@
 <dict>
 	<key>NSPhotoLibraryUsageDescription</key>
 	<string>Нужно разрешение, чтобы вставить картинку из вашей библиотеки и не делать новое фото!</string>
+	<key>NSCameraUsageDescription</key>
+	<string>Нужно разрешение, чтобы сделать фотографию для коллекции</string>
 	<key>CFBundleDevelopmentRegion</key>
 	<string>en</string>
 	<key>CFBundleExecutable</key>
